--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-card-slider-component": "^1.0.9",
